# net-file-share

./: .gitignore  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/application/: CApplication.cpp  CApplication.hpp
src/argparse/: argparse.hpp
src/file_lib/linux/: file_lib.c  file_lib.h
src/file_lib/win/: FileLib.c  FileLib.h
src/handshake/: Handshake.cpp  Handshake.hpp  glob_consts.h  handshake.cpp  handshake.hpp
src/receiver/: CReceiver.cpp  CReceiver.hpp
src/receiver/linux/: receiver_socket.c  receiver_socket.h
src/receiver/win/: ReceiverSocket.c  ReceiverSocket.h
src/sender/: CSender.cpp  CSender.hpp
src/sender/linux/: sender_socket.c  sender_socket.h
src/sender/win/: SenderSocket.c  SenderSocket.h
src/utils/: CProgressBar.cpp  CProgressBar.hpp  ProgressBar.cpp  ProgressBar.hpp
